<resources>
    <string name="app_name">Instagram</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="back_to_home_button">Back to home page</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="clientId">411144258407-6mp8rv85its2bsd7qmt0vn90u276kp6r.apps.googleusercontent.com</string>
    <string name="title_activity_product_list">ProductList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="profile_image_description">Description</string>
    <string name="profile_name">User 1</string>
    <string name="profile_email">User1email@gmail.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="label_email">Email: </string>
    <string name="label_address">Address: </string>
    <string name="label_name">Name: </string>
    <string name="label_phone">Phone: </string>
    <string name="profile_phone">0123 456 789</string>
    <string name="profile_address">8113 Creekbend Dr Houston, Texas(TX), 77071</string>
    <string name="title_activity_profile">Profile</string>
    <string name="edit_confirm">CONFIRM</string>
</resources>